Closed Bug 1654106 Opened 5 years ago Closed 5 years ago

Assertions because TimeStamp::IsNull() in ImageComposite::DetectTimeStampJitter

Categories

(Core :: Gecko Profiler, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed

People

(Reporter: mozbugz, Assigned: mozbugz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I've experienced flashes with apparent GPU process crashes when profiling, with this assertion failure:

Assertion failure: !IsNull() (Cannot compute with a null value), at c:/mozilla-source/obj-mc-dbg/dist/include\mozilla/TimeStamp.h:482
#01: mozilla::layers::ImageComposite::SetImages (c:\mozilla-source\mozilla-central\gfx\layers\composite\ImageComposite.cpp:210)
#02: mozilla::layers::WebRenderImageHost::UseTextureHost (c:\mozilla-source\mozilla-central\gfx\layers\wr\WebRenderImageHost.cpp:70)
#03: mozilla::layers::CompositableParentManager::ReceiveCompositableUpdate (c:\mozilla-source\mozilla-central\gfx\layers\ipc\CompositableTransactionParent.cpp:179)
#04: mozilla::layers::CompositableParentManager::ReceiveCompositableUpdate (c:\mozilla-source\mozilla-central\gfx\layers\ipc\CompositableTransactionParent.cpp:70)
#05: mozilla::layers::WebRenderBridgeParent::ProcessWebRenderParentCommands (c:\mozilla-source\mozilla-central\gfx\layers\wr\WebRenderBridgeParent.cpp:1370)
#06: mozilla::layers::WebRenderBridgeParent::ProcessDisplayListData (c:\mozilla-source\mozilla-central\gfx\layers\wr\WebRenderBridgeParent.cpp:1070)
#07: mozilla::layers::WebRenderBridgeParent::RecvSetDisplayList (c:\mozilla-source\mozilla-central\gfx\layers\wr\WebRenderBridgeParent.cpp:1123)
[...]

I'll prepare a quick fix (checking for null timestamps), but I'm not a graphics expert so please take over if it should be done differently.

Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2a3440bf9f3d Check that image timestamps are not null before subtracting them - r=mstange
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80

Set release status flags based on info from the regressing bug 1653350

Regressions: 1656175
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: