Bug 1654106 - Check that image timestamps are not null before subtracting them - r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D84257